--- a/src/main/webapp/resources/css/usuario_estados.css
+++ b/src/main/webapp/resources/css/usuario_estados.css
@@ -18,7 +18,7 @@
 
 #mi-td {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
